syntax = "proto3";

import "daemon/channel/pb/message_common.proto";

option go_package = "github.com/elap5e/penguin/daemon/channel/pb";

// Message generated by proto-message-gen. DO NOT EDIT.
// source: tencent.p1290im.group_pro_proto.oidb0xf62.Oidb0xf62
//
// Oidb0xf62 is the message type for the Oidb0xf62.
message Oidb0xf62 {
  // ReqBody is the message type for the ReqBody.
  message ReqBody {
    Common.Msg msg = 1; // f421631msg
  }
  // RspBody is the message type for the RspBody.
  message RspBody {
    uint32 result                        = 1; // result
    bytes errmsg                         = 2; // errmsg
    uint32 send_time                     = 3; // send_time
    Common.MsgHead head                  = 4; // head
    uint32 err_type                      = 5; // err_type
    TransSvrInfo trans_svr_info          = 6; // trans_svr_info
    Common.FreqLimitInfo freq_limit_info = 7; // freq_limit_info
  }
  // TransSvrInfo is the message type for the TransSvrInfo.
  message TransSvrInfo {
    uint32 sub_type  = 1; // sub_type
    int32 ret_code   = 2; // ret_code
    bytes err_msg    = 3; // err_msg
    bytes trans_info = 4; // trans_info
  }
}
