syntax = "proto3";

import "daemon/message/pb/common.proto";

option go_package = "github.com/elap5e/penguin/daemon/service/pb";

// OnlinePush is the message type for the msg_onlinepush.
message OnlinePush {
  // Message generated by proto-message-gen. DO NOT EDIT.
  // source: msf.onlinepush.PbPushMsg
  //
  // PbPushMsg is the message type for the PbPushMsg.
  message PbPushMsg {
    MsgCommon.Msg msg   = 1; // f425388msg
    int32 svrip         = 2; // svrip
    bytes push_token    = 3; // bytes_push_token
    uint32 ping_flag    = 4; // ping_flag
    uint32 general_flag = 9; // uint32_general_flag
    uint64 bind_uin     = 10; // uint64_bind_uin
  }
}
