syntax = "proto3";

option go_package = "github.com/elap5e/penguin/daemon/service/pb";

// Message generated by proto-message-gen. DO NOT EDIT.
// source: com.tencent.p1031pb.onlinepush.OnlinePushTrans
//
// OnlinePushService is the message type for the OnlinePushTrans.
message OnlinePushService {
  // ExtGroupKeyInfo is the message type for the ExtGroupKeyInfo.
  message ExtGroupKeyInfo {
    uint32 cur_max_seq = 1; // cur_max_seq
    uint64 cur_time    = 2; // cur_time
  }
  // PbMsgInfo is the message type for the PbMsgInfo.
  message PbMsgInfo {
    uint64 from_uin                    = 1; // from_uin
    uint64 to_uin                      = 2; // to_uin
    uint32 msg_type                    = 3; // msg_type
    uint32 msg_subtype                 = 4; // msg_subtype
    uint32 msg_seq                     = 5; // msg_seq
    uint64 msg_uid                     = 6; // msg_uid
    uint32 msg_time                    = 7; // msg_time
    uint32 real_msg_time               = 8; // real_msg_time
    string nick_name                   = 9; // nick_name
    bytes msg_data                     = 10; // msg_data
    uint32 svr_ip                      = 11; // svr_ip
    ExtGroupKeyInfo ext_group_key_info = 12; // ext_group_key_info
    uint32 general_flag                = 17; // uint32_general_flag
  }
}
